test/resources/nameAnalyzer/failing/UndefinedFunction.amy
object UndefinedFunction
  def foo(): Int(32) := bar() end foo
end UndefinedFunction
